content/versioned/2.4/os/system-tray.mdx
---
title: System tray
description: Render a tray icon and a native context menu from Compose on macOS, Windows, and Linux.
---

import { Callout } from 'fumadocs-ui/components/callout';
import { Tab, Tabs } from 'fumadocs-ui/components/tabs';

The system tray API draws a tray icon and its native context menu from Compose on macOS,
Windows, and Linux. The icon is anything Compose can draw, the menu is a Kotlin DSL, and both
react to Compose state. `Tray()` is a single composable that hands the rendered icon and menu
to the native tray API of the current OS.

<Callout type="info" title="Separate repository — versioned independently">
System tray ships from [`NucleusFramework/ComposeNativeTray`](https://github.com/NucleusFramework/ComposeNativeTray) with its own release cycle. Pin it separately from Nucleus. From 2.1.0 the library is two artifacts:

- `dev.nucleusframework:composenativetray` — `Tray` and the menu DSL. Works in Compose Desktop's `application { }` and in `nucleusApplication { }`.
- `dev.nucleusframework:composenativetray-app` — `TrayApp`. Requires `nucleusApplication { }`. See [Tray apps](/docs/os/tray-app).

<Version module="tray" />
</Callout>

## Add the dependency

```kotlin title="build.gradle.kts"
dependencies {
    implementation("dev.nucleusframework:composenativetray:<version>")
}
```

Add `composenativetray-app` only when you use [`TrayApp`](/docs/os/tray-app).

## Add a tray icon

`Tray` is an extension on Compose's `ApplicationScope`. Call it from `nucleusApplication` (or from Compose Desktop's `application`):

```kotlin
import androidx.compose.material.icons.Icons
import androidx.compose.material.icons.filled.Favorite
import dev.nucleusframework.application.nucleusApplication
import dev.nucleusframework.composenativetray.tray.api.Tray
import kotlin.system.exitProcess

fun main() = nucleusApplication {
    Tray(
        icon = Icons.Default.Favorite,
        tooltip = "My App",
        primaryAction = { showWindow() },
    ) {
        Item(label = "Show window") { showWindow() }
        Divider()
        Item(label = "Quit") { exitProcess(0) }
    }
}
```

## How it works

`Tray()` is a composable. Its icon is rasterised from Compose whenever the slot's state
changes, then handed to the native tray API of the current OS. The menu lambda runs inside a
DSL scope that re-evaluates on recomposition, so adding, removing, or relabelling items follows
the usual Compose recomposition rules.

The tray participates in your Compose state tree: it updates through recomposition, without
explicit rebuild calls or separate `.ico`/`.png`/`.icns` files to maintain.

Each platform maps to its native tray mechanism:

<Tabs items={["macOS", "Windows", "Linux (GNOME)", "Linux (KDE)"]}>
<Tab value="macOS">

Backed by `NSStatusItem` in the menu bar. Vector icons render at native DPI, with optional tinting via the `tint` parameter.

</Tab>
<Tab value="Windows">

Backed by `Shell_NotifyIcon`. Vector input is rasterised to a 32×32 `.ico` per scale factor. Pass a hand-authored `.ico` via `windowsIcon` for exact control.

</Tab>
<Tab value="Linux (GNOME)">

Uses StatusNotifierItem (KStatusNotifierItem). On stock GNOME this requires the AppIndicator extension; on Ubuntu it works out of the box.

</Tab>
<Tab value="Linux (KDE)">

StatusNotifierItem is native to Plasma. Hover tooltips and badges work where Plasma supports them.

</Tab>
</Tabs>

## Set the icon source

The `icon` parameter accepts an `ImageVector`, a `Painter`, or a Compose Multiplatform
`DrawableResource`. For full control, use `iconContent` to draw the icon with any composable:

```kotlin
// ImageVector
Tray(icon = Icons.Default.Notifications, tint = Color.White, tooltip = "App") { /* … */ }

// Painter
Tray(icon = painterResource("icon.png"), tooltip = "App") { /* … */ }

// Compose Multiplatform DrawableResource
Tray(icon = Res.drawable.app_icon, tooltip = "App") { /* … */ }

// Fully custom — any composable
Tray(
    iconContent = {
        Box(Modifier.size(24.dp).background(Color.Red, CircleShape)) {
            Text("3", color = Color.White, modifier = Modifier.align(Alignment.Center))
        }
    },
    tooltip = "3 notifications",
) { /* … */ }
```

## Use platform-specific icons

To use a native `.ico` on Windows and a vector elsewhere, set `windowsIcon` and `macLinuxIcon`:

```kotlin
Tray(
    windowsIcon = painterResource("icon.ico"),
    macLinuxIcon = Icons.Default.Notifications,
    tint = Color.White,
    tooltip = "My App",
) { /* menu */ }
```

## Handle the primary action

`primaryAction` fires on left-click (macOS/Windows) or single click (Linux, desktop-dependent).
Without it, the menu opens on every click.

```kotlin
Tray(
    icon = Icons.Default.Favorite,
    tooltip = "My App",
    primaryAction = { showWindow() },
) {
    Item(label = "Quit") { exitProcess(0) }
}
```

## What's next

- [Tray menu DSL](/docs/os/tray-menu-dsl) — items, checkables, submenus, dividers, and reactive composition.
- [Tray apps](/docs/os/tray-app) — make the tray icon open a Compose popup window.
- [WebView](/docs/webview) — another Nucleus component shipped from its own repository.
- [PDF reader](/docs/pdf) — one PDF API across Android, iOS, web, and desktop.
